# VantageRadio

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/vantageradioui/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VrtsVideoServer.cpp  VrtsVideoServer.h  native-lib.cpp
app/src/main/cpp/radio_control/: AriusControl.cpp  AriusControl.h  CMakeLists.txt  DTCControl.cpp  DTCControl.h  FakeControl.cpp  FakeControl.h  HelixControl.cpp  HelixControl.h  LICENSE  MicrohardControl.cpp  MicrohardControl.h  PoplarControl.cpp  PoplarControl.h  RadioControl.cpp  RadioControl.h  test.cpp
app/src/main/cpp/radio_control/radio_control_private/: ByteArray.cpp  ByteArray.h  Crc32.cpp  Crc32.h  DeviceDiscoveryProtocol.cpp  DeviceDiscoveryProtocol.h  DeviceDiscoveryProtocolMessage.cpp  DeviceDiscoveryProtocolMessage.h  Encryption.cpp  Encryption.h  HostAddress.cpp  HostAddress.h  MacAddress.cpp  MacAddress.h  Network.cpp  Network.h  OperatingSystem.cpp  OperatingSystem.h  RandomNumber.cpp  RandomNumber.h  StrUtils.cpp  StrUtils.h  Trace.cpp  Trace.h  UdpBroadcaster.cpp  UdpBroadcaster.h  UdpSocket.cpp  UdpSocket.h
app/src/main/cpp/vrts/: CMakeLists.txt  FakeRadioLink.cpp  FakeRadioLink.h  VRTS.cpp  VRTS.h  h265source.sh  test.cpp
app/src/main/cpp/vrts/h265nal/: CMakeLists.txt
app/src/main/cpp/vrts/h265nal/src/: CMakeLists.txt
app/src/main/cpp/vrts/mpegts/: CMakeLists.txt
app/src/main/cpp/vrts/mpegts/mpegts/: mpegts_muxer.cpp  mpegts_muxer.h
app/src/main/java/com/example/vantageradioui/: BootReceiver.kt  VantageRadioControl.kt
app/src/main/java/com/example/vantageradioui/ui/main/: PageViewModel.kt  RadioControlFragment.kt  ScrollingFragment.kt  SectionsPagerAdapter.kt  SettingsFragment.kt
app/src/main/res/drawable/: button_background.xml  button_selector.xml  edittext_background.xml  qr_code_border.xml  radio_group_background.xml  rounded_button.xml  spinner_background.xml
app/src/main/res/layout/: activity_main.xml  fragment_main.xml  fragment_scrolling.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/example/vantageradioui/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
